# aviation-ai

./: .gitignore  README.md  vercel.json
backend/: .env.example  .gitignore  Dockerfile.backend  QUICK_START.md  README.md  README_FRONTEND.md  docker-compose.yml  pyproject.toml  requirements.txt  run_tests.py  test_real_metar.py  test_runway_selection.py
backend/.github/workflows/: test.yml
backend/config/: magnetic_variation.json  settings.py
backend/docs/: ARCHITECTURE.md  COMPLETE_VERIFICATION_GUIDE.md  CROSSWIND_VERIFICATION.md  DEPLOYMENT.md  GUARDRAILS_INTEGRATION.md  GUARDRAIL_INTEGRATION.md  INTERNATIONAL_PIVOT_TEST.md  REAL_METAR_INTEGRATION.md  SAFE_FAIL_PATH.md  STATUS.md  TESTING.md  TRACE_AUDIT_RESULTS.md  TROUBLESHOOTING_INTEGRATION.md
backend/src/: __init__.py
backend/src/agent/: __init__.py  agent.py  tool_graph.py
backend/src/api/: main.py
backend/src/tools/: __init__.py  atc_phraseology.py  guardrails.py  health.py  magnetic.py  metar_real.py  runway_selection.py  tools.py  tracing.py
backend/tests/: conftest.py  test_agent_integration.py  test_guardrails_unit.py
frontend/: .env.example  .env.local.example  .gitignore  Dockerfile  README.md  next.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/components/: HealthStatus.tsx  QueryInterface.tsx
frontend/public/: manifest.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: HealthStatus.tsx  MetarDisplay.tsx  QueryInterface.tsx
frontend/src/styles/: globals.css
frontend/styles/: globals.css
