[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flight-copilot-agent"
version = "0.1.0"
description = "Agentic AI System for Flight Planning & Assistance"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn==0.27.0",
    "langgraph==0.0.28",
    "langchain==0.1.10",
    "langchain-openai==0.0.8",
    "pydantic==2.5.3",
    "python-dotenv==1.0.0",
    "httpx==0.25.2",
    "psycopg2-binary==2.9.9",
    "sqlalchemy==2.0.23",
    "pgvector==0.2.4",
    "opentelemetry-api==1.21.0",
    "opentelemetry-sdk==1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
